src/test/deca/context/invalid/avecObjet/override_asm.deca
// Description :
//    Override d'une methode asm incorrect
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Signature incompatible avec la méthode de la super-classe

class A {
    void f(int a) asm("RTS");
}

class B extends A {
    void f() asm("RTS");
}